<resources>
    <string name="app_name">Nework</string>
    <string name="authorization">Authorization</string>
    <string name="post_is_empty">Posts is empty</string>
    <string name="media_list_is_empty">Media list is empty</string>
    <string name="jobs_is_empty">Jobs is empty</string>
    <string name="posts">Posts</string>
    <string name="jobs">Jobs</string>
    <string name="media">Media</string>
    <string name="author">Author</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="exit">Are you sure to get out?</string>
    <string name="wait_authorization">Wait authorization</string>
    <string name="login_is_null">Login is Null</string>
    <string name="login_not_found">Login not found</string>
    <string name="password_not_correct">Password not correct</string>
    <string name="login_or_name_is_empty">Login or Name is empty</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_remove">Remove</string>
    <string name="error">Error</string>
    <string name="retry_loading">Retry loading</string>
    <string name="choose">Choose a source for avatar</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="remove">Remove</string>
    <string name="description_photo">Photo</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="post">Posts</string>
    <string name="addPost">Add post</string>
    <string name="music">Music</string>
    <string name="gallary">Gallary</string>
    <string name="save">Save</string>
    <string name="enter_text">Enter text</string>
    <string name="share_content">Share content</string>
    <string name="image">Image</string>
    <string name="contracts_is_canceled">Activity result contracts is canceled</string>
    <string name="menu">Menu</string>
    <string name="clear">Clear</string>
    <string name="event">Event</string>
    <string name="nework">NeWork</string>
    <string name="avatar">Avatar</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="member">Member</string>
    <string name="add_event">Add Event</string>
    <string name="name_job">Name Job</string>
    <string name="new_job">New Job</string>
    <string name="link_job">Link Job</string>
    <string name="job">Job</string>
    <string name="job_not_found">Job is not found</string>
    <string name="my_wall">My Wall</string>
    <string name="user">User</string>
    <string name="users">Users</string>
    <string name="wall_is_empty">Wall is empty</string>
    <string name="post_not_found">Post is not found</string>
    <string name="you_need_to_register">You need to register</string>
    <string name="edit">Edit</string>
    <string name="you_can_t">You can\'t like it. Something happened</string>
    <string name="failed_to_connect">Failed to connect. Try later</string>
    <string name="name_or_link_is_empty">Name or Link is empty</string>
</resources>