<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/unauthorization">
        <item
            android:id="@+id/login"
            android:title="@string/login" />
        <item
            android:id="@+id/register"
            android:title="@string/registration" />
    </group>
    <group android:id="@+id/authorization">

        <item
            android:id="@+id/logout"
            android:icon="@drawable/logout_24"
            android:orderInCategory="1"
            android:title="@string/logout"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/myWall"
            android:icon="@drawable/ic_login_24"
            android:orderInCategory="0"
            android:title="@string/my_wall"
            app:showAsAction="ifRoom" />

    </group>

</menu>