<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/save"
        android:icon="@drawable/ic_add_24dp"
        android:orderInCategory="0"
        android:title="@string/save"
        app:showAsAction="always" />
    <item
        android:id="@+id/photo"
        android:icon="@drawable/ic_camera_24dp"
        android:orderInCategory="1"
        android:title="@string/photo"
        app:showAsAction="always" />
    <item
        android:id="@+id/gallary"
        android:icon="@drawable/ic_photo_24dp"
        android:orderInCategory="2"
        android:title="@string/gallary"
        app:showAsAction="always" />
    <item
        android:id="@+id/audio"
        android:icon="@drawable/ic_music_note_24"
        android:orderInCategory="3"
        android:title="@string/media"
        app:showAsAction="always" />
    <item
        android:id="@+id/video"
        android:icon="@drawable/video_play_24"
        android:orderInCategory="3"
        android:title="@string/media"
        app:showAsAction="always" />
</menu>