<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.job.NewJobFragment">

    <TextView
        android:id="@+id/new_Job"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/new_job"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameJob"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/new_Job"
        app:layout_constraintStart_toStartOf="@id/new_Job"
        app:layout_constraintTop_toBottomOf="@id/new_Job"
        app:startIconDrawable="@drawable/name_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_job"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linkJob"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/nameJob"
        app:layout_constraintStart_toStartOf="@id/nameJob"
        app:layout_constraintTop_toBottomOf="@id/nameJob"
        app:startIconDrawable="@drawable/link_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/link_job"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveJob"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="@+id/linkJob"
        app:layout_constraintStart_toStartOf="@+id/linkJob"
        app:layout_constraintTop_toBottomOf="@+id/linkJob"
        tools:ignore="MissingConstraints">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>