<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.auth.RegisterFragment">

    <FrameLayout
        android:id="@+id/preview_avatar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/nameEdit">

        <ImageView
            android:id="@+id/preview_avatar"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_gravity="center"
            android:contentDescription="choose"
            android:src="@drawable/ic_person_24dp" />

        <Button
            android:id="@+id/clearBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal|bottom"
            android:text="@string/clear" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameEdit"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/preview_avatar_container"
        app:layout_constraintStart_toStartOf="@id/preview_avatar_container"
        app:layout_constraintTop_toBottomOf="@id/preview_avatar_container"
        app:startIconDrawable="@drawable/ic_login_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            tools:ignore="MissingConstraints" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginEditRegistr"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/nameEdit"
        app:layout_constraintStart_toStartOf="@id/nameEdit"
        app:layout_constraintTop_toBottomOf="@id/nameEdit"
        app:startIconDrawable="@drawable/ic_login_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginRegistr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditRegistr"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/loginEditRegistr"
        app:layout_constraintStart_toStartOf="@id/loginEditRegistr"
        app:layout_constraintTop_toBottomOf="@id/loginEditRegistr"
        app:startIconDrawable="@drawable/ic_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passRegistr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passCheckEditRegistr"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/passwordEditRegistr"
        app:layout_constraintStart_toStartOf="@id/passwordEditRegistr"
        app:layout_constraintTop_toBottomOf="@id/passwordEditRegistr"
        app:startIconDrawable="@drawable/ic_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passCheckRegistr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registrButton"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_marginStart="4dp"
        android:text="@string/registration"
        app:layout_constraintEnd_toEndOf="@+id/passCheckEditRegistr"
        app:layout_constraintStart_toStartOf="@+id/passCheckEditRegistr"
        app:layout_constraintTop_toBottomOf="@+id/passCheckEditRegistr"
        tools:ignore="MissingConstraints">

    </Button>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>