<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.auth.LogoutFragment"
    android:layout_margin="@dimen/margin_4dp"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center"
            android:text="@string/Exit"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/ok"
            app:layout_constraintStart_toStartOf="@+id/text"
            app:layout_constraintTop_toBottomOf="@+id/text"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/text"
            app:layout_constraintTop_toBottomOf="@+id/text"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/logoutGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="text, buttonOk, buttonCancel" />

        <TextView
            android:id="@+id/textQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/you_need_to_register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <Button
            android:id="@+id/buttonOkQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/ok"
            app:layout_constraintStart_toStartOf="@+id/textQuestion"
            app:layout_constraintTop_toBottomOf="@+id/textQuestion"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/buttonCancelQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="@+id/textQuestion"
            app:layout_constraintTop_toBottomOf="@+id/textQuestion"
            tools:ignore="MissingConstraints" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/questionGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="textQuestion, buttonOkQuestion, buttonCancelQuestion" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>